<resources>
    <string name="all_orders">ALL ORDERS</string>
    <string name="aged_cancel">AGED CANCEL</string>
    <string name="aged_cancel_info">This customer has not collected their order within the allotted time frame for pick up. Please mark it as aged cancel and return the units to the floor.</string>
    <string name="app_name">NSF</string>
    <string name="athlete">Customer</string>
    <string name="athlete_info">Customer Info</string>
    <string name="athlete_name">CUSTOMER NAME</string>
    <string name="back">BACK</string>
    <string name="bring_to_athlete_description">Bring this order to the customer</string>
    <string name="bring_to_athlete_title">Bring Order To Customer</string>
    <string name="cancel_error">There was an issue canceling this order. Please try again.</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="cancel_confirmation_title">Confirm Cancel</string>
    <string name="cancel_confirmation_info">Are you sure you want to cancel this order? The customer will be notified that the order has been cancelled.</string>
    <string name="cancel_reason_title">Why are you canceling?</string>
    <string name="cant_find_the_ip">CAN\'T FIND THE IP?</string>
    <string name="car_info">CAR INFO</string>
    <string name="clear">Clear</string>
    <string name="color">Color</string>
    <string name="color_caps">COLOR</string>
    <string name="complete">COMPLETE</string>
    <string name="complete_pickup">COMPLETE PICKUP</string>
    <string name="confirm_pickup">CONFIRM PICKUP</string>
    <string name="connect">CONNECT</string>
    <string name="connect_printer">Connect Printer</string>
    <string name="connect_printer_subtitle">Type the printer IP address number located on the printer.</string>
    <string name="contents">Order Contents</string>
    <string name="login_node_id_text_label">Store #</string>
    <string name="login_node_id_text_invalid_error">Invalid Store #</string>
    <string name="login_user_id_text_label">User ID</string>
    <string name="login_user_id_text_invalid_error">Invalid User ID</string>
    <string name="store_no_label">Store Number</string>
    <string name="dropdown_menu_demo">Demo</string>
    <string name="dropdown_menu_logout">Logout</string>
    <string name="dropdown_menu_settings">Settings</string>
    <string name="extend_pickup">EXTEND PICKUP</string>
    <string name="get_order_description">Retrieve and scan all packages associated with this order.</string>
    <string name="get_order_title">Retrieve and Scan Orders</string>
    <string name="hide">HIDE</string>
    <string name="select">SELECT</string>
    <string name="holding_area">HOLDING AREA</string>
    <string name="info_modal_order_extend_pickup_message">Confirming the pickup extension will move the pickup deadline from %1$s to %2$s.</string>
    <string name="info_modal_order_extend_pickup_title">Confirm Extension</string>
    <string name="info_modal_order_remove_check_in_message">Are you sure you’d like to remove the check-in for this order?</string>
    <string name="info_modal_order_remove_check_in_title">Remove Check-In</string>
    <string name="info_modal_pick_on_the_bench_message">One of your teammates got to picking this BOPIS order first and is working hard to crush it. You\'re on the bench for this one.</string>
    <string name="info_modal_pick_on_the_bench_title">On The Bench</string>
    <string name="info_modal_pick_store_overview_message">This ring shows how much progress you have made picking units for today. The first number is the units worked and the second number is the total amount of units the store has received.\n\nThe following colors indicate the status of the units:</string>
    <string name="info_modal_pick_store_overview_title">About</string>
    <string name="location">HOLD LOCATION</string>
    <string name="item_location">LOCATION</string>
    <string name="login_text">Login</string>
    <string name="name">NAME</string>
    <string name="ninety_nine_plus">99+</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="next">NEXT</string>
    <string name="on_hand">ON HAND</string>
    <string name="order_cancelled_title">Order Canceled</string>
    <string name="order_aged_cancelled_title">Confirm Aged Cancel</string>
    <string name="order_cancelled_info">Remember to return the all of units from this order to the sales floor.</string>
    <string name="order_aged_cancelled_info">Confirm to cancel this aged order. Then, return all units to the floor.</string>
    <string name="order_damaged_info">This order has been canceled. </string>
    <string name="order_info">Order Info</string>
    <string name="order_management">Order Management</string>
    <string name="order_num">ORDER NUMBER</string>
    <string name="order_number">ORDER NUMBER</string>
    <string name="order_type">ORDER TYPE</string>
    <string name="order_date">ORDER DATE</string>
    <string name="order_time">ORDER TIME</string>
    <string name="expected">EXPECTED</string>
    <string name="received_on">RECEIVED ON</string>
    <string name="packer">PACKER</string>
    <string name="stager">STAGER</string>
    <string name="substitutions_applied">Substitutions Applied</string>
    <string name="dispenser">PICKUP TEAMMATE</string>
    <string name="order_number_or_last_name">Order #, Phone # or Last Name</string>
    <string name="order_search_label">Order Search</string>
    <string name="pack_these_units">Pack These Units</string>
    <string name="packed_by">PACKED BY</string>
    <string name="packed_on">PACKED ON</string>
    <string name="packed_at">PACKED AT</string>
    <string name="prepped_on">PREPPED ON</string>
    <string name="prepped_at">PREPPED AT</string>
    <string name="staged_by">STAGED BY</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="pickup_actions">Pickup Actions</string>
    <string name="pickup_location">PICKUP LOCATION</string>
    <string name="print_hold_slip">PRINT HOLD SLIP</string>
    <string name="printer_connected">Connected</string>
    <string name="printer_ip">Printer IP</string>
    <string name="printer_ip_caps">PRINTER IP</string>
    <string name="printer_unconnected">Unconnected</string>
    <string name="printers_title">Printers</string>
    <string name="proxy_name">PROXY NAME</string>
    <string name="remove_check_in">REMOVE CHECK-IN</string>
    <string name="remove_printer">Remove Printer</string>
    <string name="remove_printer_subtitle">Are you sure you want to disconnect this printer from %1$s</string>
    <string name="scan_holding_location">Scan Holding Location</string>
    <string name="select_holding_area">Select Holding Area</string>
    <string name="score_card">SCORE CARD</string>
    <string name="search">Search</string>
    <string name="search_hint">Name, Order #, or Phone #</string>
    <string name="show">SHOW</string>
    <string name="size">Size</string>
    <string name="size_caps">SIZE</string>
    <string name="start_pickup">START PICKUP</string>
    <string name="step_1_pack">STEP 1: PACK</string>
    <string name="step_2_stage">STEP 2: STAGE</string>
    <string name="units">UNITS</string>
    <string name="upc">UPC</string>
    <string name="upc_caps">UPC</string>
    <string name="yes">YES</string>
    <string name="hold_slip_retrieve_error">Error retrieving hold slip</string>
    <string name="hold_slip_print_success">Hold slip printed</string>
    <string name="hold_slip_print_error">Error printing hold slip</string>

    <!-- Pick -->
    <string name="decline">DECLINE</string>
    <string name="decline_reason">Decline Reason</string>
    <string name="decline_reason_subtitle">Why are you declining this item?</string>
    <string name="unit_locations">Unit Locations</string>
    <string name="unit_locations_subtitle">This product has multiple locations assigned to it. Where did you pick this unit it from?</string>
    <string name="additional_details">Additional Details</string>
    <string name="last_received">Last Received</string>
    <string name="last_returned">Last Returned</string>
    <string name="locations">Locations</string>

    <!-- Prep -->
    <string name="scan_to_pack">SCAN UPC TO PACK</string>
    <string name="pack_by_order">PACK BY ORDER</string>
    <string name="scan_pack">Scan and Pack Units</string>
    <string name="substituted">Substituted</string>
    <string name="pack_order">Pack Order</string>
    <string name="pack_info">Package units in a properly-sized bag, then place the printed hold slip on the front.</string>
    <string name="picked_by">Picked By</string>
    <string name="scan_location">Scan Location</string>
    <string name="holding_area_hint">Holding Area*</string>
    <string name="done">Done</string>
    <string name="reprint_hold_slip">REPRINT HOLD SLIP</string>
    <string name="print_hold_slips">Print %1$s Hold Slips</string>
    <string name="print_all">PRINT ALL</string>
    <string name="decline_modal_description">Choose a decline reason. Once confirmed, this action cannot be undone.</string>
    <string name="confirm_decline">CONFIRM DECLINE</string>
    <string name="scan_package">Scan Package</string>
    <string name="scan_place_hold">Scan the packaging, then place the printed hold slip on the front.</string>

    <!--  Printer Problems  -->
    <string name="printer_problems">PRINTER PROBLEMS?</string>
    <string name="other_printer">OTHER PRINTER</string>
    <string name="printer_problems_title">Troubleshooting</string>
    <string name="printer_problems_info">Label failed to print: \n• Ensure printer is on. \n• Check wifi signal on mobile device.\n• Check IP Address of printer. \n• Tap CONNECT. \n\nLabel printed on multiple labels? \n• Tap CALIBRATE. \n\nStill need help? \nPlease contact the technology service desk to trouble shoot other issues. \n\ntechnologyservicedesk@dcsg.com (724) 273–3456</string>

    <!-- UnderConstruction   -->
    <string name="under_construction_title">Work in progress</string>
    <string name="under_construction_info">We\'re working closely with fulfillment experts and smart customers like you to bring more useful features. Check back soon!</string>
    <string name="pick_under_construction_body">We\'re working closely with fulfillment experts and smart customers like you to bring more useful features. Check back soon!</string>
    <string name="pick_under_construction_title">Work in progress</string>
    <string name="prep_under_construction_body">Coming soon to an app near you: separated staging and packing, so we work like you work.</string>
    <string name="prep_under_construction_title">Breaking news</string>

    <!-- Search Results -->
    <string name="strike">No Results!</string>
    <string name="search_results_info"> Scan a barcode or enter a name, phone number, or order number.</string>

    <!-- Order Pickup -->
    <string name="confirm_pickup_modal_title">Confirm Pickup</string>
    <string name="confirm_pickup_modal_info">Confirming the pickup will charge the customers’s method of payment.</string>
    <string name="pickup_complete">Pickup Complete</string>
    <string name="delivery_speed">Delivery Speed</string>
    <string name="bopl_prep_2">Place Hold Slip On Order</string>
    <string name="bopl_prep_1">Print Hold Slip</string>
    <string name="edit_hold_location">Edit Location</string>
    <string name="match_slips_to_units">Match Slips To Units</string>
    <string name="picked_up_on">PICKED UP ON</string>
    <string name="picked_up_at">PICKED UP AT</string>
    <string name="sdd_pickup">SDD PICKUP</string>
    <string name="driver">Driver</string>

    <!-- Filters -->
    <string name="filters">Filters</string>
    <string name="filters_category_order_type">Fulfillment Type</string>
    <string name="filters_category_order_status">Status</string>
    <string name="apply_filters">APPLY FILTERS</string>
    <string name="empty_ready_title">Wow!</string>
    <string name="empty_ready_body">That was fast, excellent work delivering those orders. Great job!</string>
    <string name="empty_in_progress_title">Nothing to see here :-)</string>
    <string name="empty_in_progress_body">All the current orders are done, there\'s nothing to process right now. Good job!</string>

    <string name="bopis_pick_uph">bopis pick uph</string>
    <string name="units_worked_in_time">units worked in time</string>
    <string name="productivity">productivity</string>
    <string name="fill_rate">fill rate</string>
    <string name="mm_ss">MM:SS</string>
    <string name="updated_every_15_minutes">Updated every 15 minutes. This data may not represent final performance results.</string>
</resources>