...
							.padding(top = 20.dp, bottom = 6.dp, start = 10.dp, end = 10.dp),
						horizontalArrangement = Arrangement.Center
					) {
						PrimaryButton(
							modifier = Modifier
								.fillMaxWidth()
								.semantics { testTag = "InfoModalButton" },
							text = stringResource(R.string.confirm_decline),
							buttonColor = BrandColor.DARK_BLUE,
							onButtonClick = {
								when (selectedOption) {
									"Damaged" -> onConfirmDecline("DAMAGE")
									"Not Found" -> onConfirmDecline("NOT_FOUND")
...
