...
			fontStyle = FontStyle.Normal,
			fontSize = 12.sp
		)

		Row(
			modifier = Modifier
				.testTag("TopLabeledTextFieldFieldValue")
				.fillMaxWidth()
				.height(44.dp)
				.padding(top = 2.dp, bottom = 2.dp)
				.border(
					border = borderStroke,
					shape = textFieldShape
...
