...
                        } else {
                            stringResource(id = R.string.show)
                        },
                        onButtonClick = {
                            isExpanded = !isExpanded
                        },
                        tag = "showHideBtn"
                    )
                    Icon(
                        modifier = Modifier
                            .padding(start = 5.dp)
                            .clickable { isExpanded = !isExpanded },
                        painter = if (isExpanded) {
...
